--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  image_picker: ^1.1.2
+
 dev_dependencies:
   integration_test:
     sdk: flutter
