--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,6 +31,12 @@ dependencies:
 
   image_picker: ^1.1.2
 
+  video_player: ^2.9.3
+
+  video_thumbnail: ^0.5.3
+
+  path_provider: ^2.1.5
+
 dev_dependencies:
   integration_test:
     sdk: flutter
@@ -54,6 +60,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/video.mp4
 
   # To add assets to your application, add an assets section, like this:
   # assets:
